# chombot

./: .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  Cargo.toml  Dockerfile  LICENSE  README.md  build.gradle  chombot-kcc.dockerfile  chombot.dockerfile  docker-compose.yml  prepare-tiles.sh  settings.gradle
.github/: dependabot.yml
.github/workflows/: docker-publish.yml  rust.yml
chombot/: .env.example  Cargo.toml  docker-compose.yml
chombot-common/: Cargo.toml
chombot-common/src/: chombot.rs  data.rs  data_watcher.rs  discord_utils.rs  lib.rs  scraping_utils.rs
chombot-common/src/ranking_watcher/: mod.rs  notifier.rs  usma.rs
chombot-common/src/slash_commands/: hand.rs  mod.rs  score.rs
chombot-common/src/tournaments_watcher/: ema.rs  mod.rs  notifier.rs
chombot-common/src/tournaments_watcher/test_data/: calendar_1.html  calendar_2.html  expected_message.txt
chombot-kcc/: .env.example  Cargo.toml  docker-compose.yml
chombot-kcc/src/: args.rs  chombot.rs  main.rs
chombot-kcc/src/kcc3/: data_types.rs
chombot-kcc/src/ranking_watcher/: notifier.rs  usma.rs
chombot-kcc/src/ranking_watcher/test_data/: ranking.html
chombot-kcc/src/slash_commands/: chombo.rs  fancy_text.rs  mod.rs
chombot-kcc/src/slash_commands/pasta/: command.rs  fanatyk.txt  jgamescon.txt  ksiaze.txt  mod.rs  stowarzyszenie.txt  tanjalo.txt
chombot/src/: args.rs  config.rs  lib.rs  main.rs  tournament_watcher.rs
chombot/src/ranking_watcher/: notifier.rs  usma.rs
gradle/wrapper/: gradle-wrapper.properties
src/: args.rs  chombot.rs  data_watcher.rs  discord_utils.rs  main.rs  scraping_utils.rs
src/boardowa/: api.rs  mod.rs  models.rs  ranking.rs
src/kcc3/: data_types.rs  mod.rs
src/main/kotlin/pl/krakow/riichi/chombot/: Main.kt
src/main/kotlin/pl/krakow/riichi/chombot/commands/: AkagiInflationRate.kt  AtEveryoneAngryReactions.kt  ChomboCommand.kt  Command.kt
src/main/kotlin/pl/krakow/riichi/chombot/commands/chombo/: ChomboCommand.kt  ChomboEvent.kt  ChomboEventList.kt  ChomboEventSerializer.kt  ChomboStats.kt  DateSerializer.kt  Formatter.kt  SimpleEmbedFormatter.kt
src/main/kotlin/pl/krakow/riichi/chombot/commands/hand/: DrawHandCommand.kt  Hand.kt  PNGHandRenderer.kt
src/main/kotlin/pl/krakow/riichi/chombot/commands/kcc3client/: Chombo.kt  DateSerializer.kt  Kcc3Client.kt  Player.kt
src/ranking_watcher/: mod.rs  notifier.rs  usma.rs
src/slash_commands/: boardowa.rs  chombo.rs  hand.rs  mod.rs  score.rs  utils.rs
src/slash_commands/pasta/: command.rs  jgamescon.txt  ksiaze.txt  mod.rs  stowarzyszenie.txt  yostar.txt
src/tournaments_watcher/: ema.rs  notifier.rs
systemd/: chombot.service
