[workspace]
members = [
    "chombot-common",
    "chombot",
    "chombot-kcc"
]
resolver = "2"

[profile.release]
codegen-units = 1
lto = true

[workspace.dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
chrono = { version = "0.4.41", features = ["serde"] }
reqwest = { version = "0.12.15", features = ["json"] }
riichi_hand = "0.6.3"
scraper = "0.22.0"
serde = "1.0.219"
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
slug = "0.1.6"
clap = { version = "4.5.37", features = ["derive", "env"] }
env_logger = "0.11.6"
log = "0.4.27"
num-bigint = "0.4.6"
itertools = "0.13.0"
poise = "0.6.1"
