[workspace]
members = [
    "chombot-common",
    "chombot",
    "chombot-kcc"
]
resolver = "2"

[profile.release]
codegen-units = 1
lto = true

[workspace.dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
chrono = { version = "0.4.43", features = ["serde"] }
reqwest = { version = "0.13.1", features = ["form", "json"] }
riichi_hand = "0.7.0"
scraper = "0.25.0"
serde = "1.0.228"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
slug = "0.1.6"
clap = { version = "4.5.56", features = ["derive", "env"] }
env_logger = "0.11.6"
log = "0.4.29"
num-bigint = "0.4.6"
itertools = "0.14.0"
poise = "0.6.1"
